--- a/task3/composer.json
+++ b/task3/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "monolog/monolog": "^1.24",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "vlucas/valitron": "^1.4"
     },
     "autoload": {
         "psr-4" : {
